--- a/static/css/login.css
+++ b/static/css/login.css
@@ -7,6 +7,7 @@ main {
   justify-content: center;
   flex-wrap: wrap;
   font-family: "Noto Sans", "Noto Sans KR";
+  margin-top: 5rem;
 }
 
 main .login__container {
@@ -17,7 +18,7 @@ main .login__container {
   justify-content: center;
   font-size: 2rem;
   flex-wrap: wrap;
-  margin-top: 6rem;
+  margin-top: 5rem;
 }
 
 main .login__nor {
@@ -68,12 +69,12 @@ main .input {
 
 .input__id:focus {
   outline: none !important;
-  border: 1px solid #8c8c8c;
+  border: 1px solid blue;
 }
 
 .input__pw:focus {
   outline: none !important;
-  border: 1px solid #8c8c8c;
+  border: 1px solid blue;
 }
 
 /*checkbox*/
@@ -95,7 +96,6 @@ input#input__cb + label:before {
   border: 1px solid #cbcbcb;
   vertical-align: middle;
   margin-top: 1rem;
-  margin-left: 0.2rem;
 }
 
 input#input__cb:checked + label:before {
