--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,46 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>로그인</title>
-    <link rel="stylesheet" href="./register.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Noto+Sans:wght@600&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/0dee369a16.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <!--nav bar-->
-    <nav class="navbar">
-      <ul class="navbar__list">
-				<li><a href="{% url 'posts:home' %}">MOCO</a></li>
-        <li><a href="{% url 'posts:home' %}">모각코</a></li>
-        <li><a href="{% url 'place:home' %}">플레이스</a></li>
-        <li><a href="">공지사항</a></li>
-      </ul>
-			<ul class="navbar__shortcut">
-				{% if user.is_authenticated %}
-				<li><a href="{% url 'place:write' %}">글쓰기</a></li>
-				<i class="fa-regular fa-bell"></i>
-				<i class="fa-solid fa-circle-user"></i>
-				{% else %}
-				<li><a href="{% url 'place:write' %}">글쓰기</a></li>
-				<li><a href="">로그인</a></li>
-				{% endif %}
-			</ul>
-    </nav>
+{% extends 'users/account_base.html' %} {% block content %}
     <!--login main-->
     <main>
       <div class="signup__container">
@@ -62,4 +20,6 @@
       crossorigin="anonymous"
     ></script>
   </body>
-</html>
+
+  {% endblock %}
+
