--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,7 +1,7 @@
 {% extends 'users/account_base.html' %} {% block content %}
 <main>
-  <div class="signup__container">
-    <div class="signup__nor">
+  <div id="signup__1st__container">
+    <div class="signup__1st__nor">
       <span>회원가입</span>
       <div class="input">
         <p style="margin-top: 2.5rem">아이디</p>
@@ -17,7 +17,7 @@
           placeholder="비밀번호 (확인)"
         />
       </div>
-      <button id="signup__1st__btn" onclick="signupFuntion()">다음</button>
+      <button id="signup__1st__btn" onclick="signupFunction()">다음</button>
       <div id="sub__reg__menu">
         회원가입 시, MOCO가 제공하는 서비스를 모두 이용하실 수 있습니다. MOCO의
         <button class="openBtn1">서비스 이용약관</button>,
@@ -73,6 +73,105 @@
     </div>
   </div>
 </main>
+<main>
+  <div id="signup__2nd__container">
+    <div class="signup__2nd__nor">
+      <span>회원가입</span>
+      <div class="input">
+        <p style="margin-top: 2.5rem">이름</p>
+        <input class="input__reg__name" type="text" placeholder="직접입력" />
+        <p>닉네임</p>
+        <input
+          class="input__reg__nickname"
+          type="text"
+          placeholder="직접입력"
+        />
+        <p>
+          프로필 사진&nbsp;<span style="color: #8c8c8c">(선택)</span><br /><span
+            style="color: #8c8c8c; font-size: 0.5rem"
+            >*업로드 안할 시, MOCO에서 제공하는 기본 프로필 사진으로
+            적용됩니다.</span
+          >
+        </p>
+        <div class="input__profile">
+          <input
+            type="file"
+            name="uploadfile"
+            id="img"
+            style="display: none"
+            accept="image/gif, image/jpeg, image/png"
+          />
+          <label class="input__img" for="img"
+            ><span id="input__plus"> + </span>
+            <span id="input__plus__desc"
+              >&nbsp;&nbsp;이미지를 드래그하거나<br />클릭해서 업로드
+              해주세요</span
+            >
+          </label>
+        </div>
+        <p>성별</p>
+        <select
+          class="form-select form-select-lg mb-3 gender-select"
+          aria-label=".form-select-lg example"
+        >
+          <option selected>남자 / 여자</option>
+          <option value="male">남자</option>
+          <option value="female">여자</option>
+        </select>
+        <p>직업</p>
+        <select
+          class="form-select form-select-lg mb-3 career-select"
+          aria-label=".form-select-lg example"
+        >
+          <option selected>학생 / 취준생 / 직장인 / 기타</option>
+          <option value="student">학생</option>
+          <option value="jobseeker">취준생</option>
+          <option value="worker">직장인</option>
+          <option value="other">기타</option>
+        </select>
+        <p>생년월일</p>
+        <div class="input__birthday">
+          <input class="input__year" type="number" placeholder="년" />
+          <select
+            class="form-select form-select-lg mb-3 month-select"
+            aria-label=".form-select-lg example"
+          >
+            <option selected>월</option>
+            <option value="Jan">1</option>
+            <option value="Feb">2</option>
+            <option value="Mar">3</option>
+            <option value="Apr">4</option>
+            <option value="May">5</option>
+            <option value="Jun">6</option>
+            <option value="Jul">7</option>
+            <option value="Aug">8</option>
+            <option value="Set">9</option>
+            <option value="Oct">10</option>
+            <option value="Nov">11</option>
+            <option value="Dec">12</option>
+          </select>
+          <input class="input__day" type="number" placeholder="일" />
+        </div>
+        <p>자기소개&nbsp;<span style="color: #8c8c8c">(선택)</span></p>
+        <p>
+          <textarea
+            class="input__self"
+            cols="50"
+            rows="10"
+            placeholder="100자 이내로 입력해주세요."
+            maxlength="100"
+          ></textarea>
+        </p>
+      </div>
+      <button id="signup__2nd__btn" onclick="registerLink()">가입 완료</button>
+    </div>
+  </div>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"
+  ></script>
+</main>
 <script>
   const open = () => {
     document.querySelector(".modal").classList.remove("hidden");
@@ -97,8 +196,29 @@
     }
   }
 
-  function signupFuntion() {
-    location.replace("user/signup-2nd-step.html");
+  /*function signupFunction() {
+    const div1st = document.getElementById("signup__1st__container");
+    const div2nd = document.getElementById("signup__2nd__container");
+
+    if (div1st.style.display === "none") {
+      div1st.style.display = "block";
+      div2nd.style.display = "none";
+    } else {
+      div1st.style.display = "none";
+      div2nd.style.display = "block";
+    }
+  }*/
+  const div1st = document.getElementById("signup__1st__container");
+  const div2nd = document.getElementById("signup__2nd__container");
+  div2nd.style.display = "none";
+
+  function signupFunction() {
+    if (div1st.style.display === "flex") {
+      div2nd.style.display = "none";
+    } else {
+      div1st.style.display = "none";
+      div2nd.style.display = "flex";
+    }
   }
 </script>
 {% endblock %}
