[fix] 템플릿 form 형식으로 변경, css 적용 전

--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -265,7 +265,7 @@ main .input {
 
 .input__reg__name:focus {
   outline: none !important;
-  border: 1px solid #8c8c8c;
+  border: 1px solid blue;
 }
 
 .input__reg__nickname {
@@ -286,7 +286,7 @@ main .input {
 
 .input__reg__nickname:focus {
   outline: none !important;
-  border: 1px solid #8c8c8c;
+  border: 1px solid blue;
 }
 
 .input__profile {
