--- a/static/css/account_base.css
+++ b/static/css/account_base.css
@@ -20,6 +20,7 @@
 
 .navbar {
   box-shadow: 0px 4px 10px rgba(171, 186, 189, 0.15);
+  background-color: white;
   font-family: "Noto Sans", sans-serif;
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 600;
