--- a/posts/templates/posts/main_detail.html
+++ b/posts/templates/posts/main_detail.html
@@ -188,7 +188,7 @@
           </label>
           <input
             type="file"
-            name="review_content"
+            name="review_image"
             id="main_detail__review__upload_file"
             placeholder="이미지를 드래그하거나 클릭해서 업로드해주세요"
           />
