[fix] 템플릿 form 형식으로 변경 완료, css 수정

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -38,7 +38,7 @@ main .input {
   flex-wrap: wrap;
 }
 
-.input__id {
+.input__id input {
   width: 22rem;
   height: 4rem;
   border-radius: 0.5rem;
@@ -48,12 +48,12 @@ main .input {
   border: 1px solid #8c8c8c;
 }
 
-.input__id::placeholder {
+.input__id input::placeholder {
   font-size: 1rem;
   color: #8c8c8c;
 }
 
-.input__pw {
+.input__pw input {
   width: 22rem;
   height: 4rem;
   border-radius: 0.5rem;
@@ -61,18 +61,18 @@ main .input {
   border: 1px solid #8c8c8c;
 }
 
-.input__pw::placeholder {
+.input__pw input::placeholder {
   font-size: 1rem;
   color: #8c8c8c;
   border-color: #8c8c8c;
 }
 
-.input__id:focus {
+.input__id input:focus {
   outline: none !important;
   border: 1px solid blue;
 }
 
-.input__pw:focus {
+.input__pw input:focus {
   outline: none !important;
   border: 1px solid blue;
 }
