--- a/static/css/find_id.css
+++ b/static/css/find_id.css
@@ -38,7 +38,7 @@ main .input {
   flex-wrap: wrap;
 }
 
-.input__name {
+.input__name input {
   width: 22rem;
   height: 4rem;
   border-radius: 0.5rem;
@@ -48,12 +48,12 @@ main .input {
   border: 1px solid #8c8c8c;
 }
 
-.input__name::placeholder {
+.input__name input::placeholder {
   font-size: 1rem;
   color: #8c8c8c;
 }
 
-.input__birth {
+.input__birth input {
   width: 22rem;
   height: 4rem;
   border-radius: 0.5rem;
@@ -61,18 +61,18 @@ main .input {
   border: 1px solid #8c8c8c;
 }
 
-.input__birth::placeholder {
+.input__birth input::placeholder {
   font-size: 1rem;
   color: #8c8c8c;
   border-color: #8c8c8c;
 }
 
-.input__name:focus {
+.input__name input:focus {
   outline: none !important;
   border: 1px solid blue;
 }
 
-.input__birth:focus {
+.input__birth input:focus {
   outline: none !important;
   border: 1px solid blue;
 }
