--- a/static/css/find_id.css
+++ b/static/css/find_id.css
@@ -90,56 +90,57 @@ main .input {
   font-weight: 900;
 }
 
-#sub__menu {
-  height: 2rem;
-  margin-top: 1rem;
-  font-size: 1rem;
-  font-weight: 100;
-  color: #8c8c8c;
-}
-
-#sub__menu a {
-  text-decoration: none;
-  color: #8c8c8c;
-}
-
-/*간편 로그인*/
-.login__sim {
-  width: 50rem;
-  height: 2rem;
-  margin-top: 2rem;
+#searchModal.find__modal-overlay {
+  display: none;
+  width: 100%;
+  height: 130%;
+  position: absolute;
+  left: 0;
+  top: 0;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  font-size: 1rem;
-  color: #8c8c8c;
-  font-weight: 100;
+  justify-content: center;
+  background: rgba(103, 99, 99, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
-hr {
-  width: 9rem;
-  height: 0.1rem;
-  margin: 0 0.5rem 0 0.5rem;
+#searchModal .modal__window {
+  background: #fff;
+  box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+  backdrop-filter: blur(13.5px);
+  -webkit-backdrop-filter: blur(13.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 35rem;
+  height: auto;
+  position: relative;
+  padding: 10px;
 }
-
-.login__sim__soc {
-  width: 22rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  margin-top: 1rem;
+#searchModal .modal__title {
+  padding-left: 10px;
+  display: inline;
+  color: black;
 }
-
-.login__sim__soc button {
+#searchModal .modal__title h3 {
+  display: inline;
+}
+#searchModal .modal-close {
+  display: inline;
+  float: right;
+  padding-right: 10px;
   cursor: pointer;
-  width: 4.5rem;
-  height: 4.5rem;
-  outline: 0;
-  border: 1px solid #8c8c8c;
-  border-radius: 0.3rem;
-  background-color: #fff;
+  color: black;
+}
+
+#searchModal .modal__content {
+  margin-top: 20px;
+  padding: 0px 10px;
+  color: black;
   font-size: 1rem;
-  font-weight: 100;
-  color: #8c8c8c;
+  line-height: 1.3rem;
 }
