--- a/static/css/signup.css
+++ b/static/css/signup.css
@@ -165,6 +165,118 @@ input#input__reg__cb:checked + label:before {
 }
 /* checkbox */
 
+/*모달*/
+#signup__modal-1.modal-overlay {
+  display: none;
+  width: 100%;
+  height: 130%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(103, 99, 99, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+#signup__modal-1 .modal__window {
+  background: #fff;
+  box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+  backdrop-filter: blur(13.5px);
+  -webkit-backdrop-filter: blur(13.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 35rem;
+  height: auto;
+  position: relative;
+  padding: 10px;
+}
+#signup__modal-1 .modal__title {
+  padding-left: 10px;
+  display: inline;
+  color: black;
+}
+#signup__modal-1 .modal__title h3 {
+  display: inline;
+}
+#signup__modal-1 .modal-close {
+  display: inline;
+  float: right;
+  padding-right: 10px;
+  cursor: pointer;
+  color: black;
+}
+
+#signup__modal-1 .modal__content {
+  margin-top: 20px;
+  padding: 0px 10px;
+  color: black;
+  font-size: 1rem;
+  line-height: 1.3rem;
+}
+
+#signup__modal-2.modal-overlay {
+  display: none;
+  width: 100%;
+  height: 130%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: rgba(103, 99, 99, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(1.5px);
+  -webkit-backdrop-filter: blur(1.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+}
+
+#signup__modal-2 .modal__window {
+  background: #fff;
+  box-shadow: 0 8px 32px 0 rgba(16, 18, 42, 0.37);
+  backdrop-filter: blur(13.5px);
+  -webkit-backdrop-filter: blur(13.5px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
+  width: 35rem;
+  height: auto;
+  position: relative;
+  padding: 10px;
+}
+#signup__modal-2 .modal__title {
+  padding-left: 10px;
+  display: inline;
+  color: black;
+}
+#signup__modal-2 .modal__title h3 {
+  display: inline;
+}
+#signup__modal-2 .modal-close {
+  display: inline;
+  float: right;
+  padding-right: 10px;
+  cursor: pointer;
+  color: black;
+}
+
+#signup__modal-2 .modal__content {
+  margin-top: 20px;
+  padding: 0px 10px;
+  color: black;
+  font-size: 1rem;
+  line-height: 1.3rem;
+}
+/*모달*/
+
 /*간편 로그인*/
 .signup__sim {
   width: 50rem;
