--- a/users/templates/users/account_base.html
+++ b/users/templates/users/account_base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{%static 'css/signup.css' %}" />
     <link rel="stylesheet" href="{%static 'css/find_id.css' %}" />
     <link rel="stylesheet" href="{%static 'css/register.css' %}" />
+    <link rel="stylesheet" href="{%static 'css/users_main.css' %}" />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&family=Noto+Sans:wght@600&display=swap"
       rel="stylesheet"
