--- a/users/templates/users/find_id.html
+++ b/users/templates/users/find_id.html
@@ -3,6 +3,7 @@
   <div class="idsearch__container">
     <div class="idsearch__div">
       <span>아이디 찾기</span>
+      {% if form %}
       <form
         action="{% url 'users:find_id' %}"
         method="post"
@@ -32,10 +33,60 @@
               placeholder="생년월일"
             />
           </div>
-          <button id="search__btn">아이디 찾기</button>
+          <button id="search__btn" type="submit">아이디 찾기</button>
+          <!--<div
+            id="searchModal"
+            class="find__modal-overlay"
+            style="display: none"
+          >
+            <div class="modal__window">
+              <div class="modal__title">
+                <div class="modal-close">X</div>
+                <h4>
+                  회원님의 아이디는
+                  <div class="search__modal__content">{{user.username}}</div>
+                  입니다
+                </h4>
+              </div>
+            </div>
+          </div>-->
         </div>
       </form>
+      {% elif users %} {% for user in users %}
+      <p>
+        아이디는 {{user.username}} 입니다.
+        <a href="{% url 'users:login' %}"
+          ><button id="search__btn">로그인 페이지로 돌아가기</button></a
+        >
+      </p>
+      {% endfor %} {% else %}
+      <p>
+        등록된 회원이 아닙니다.
+        <a href="{% url 'users:find_id' %}"
+          ><button id="search__btn">X</button></a
+        >
+      </p>
+      {% endif %}
     </div>
   </div>
 </main>
+<script>
+  /*const findIdModal = document.getElementById("searchModal");
+  const findIdBtn = document.getElementById("search__btn");
+  findIdBtn.addEventListener("click", (e) => {
+    findIdModal.style.display = "flex";
+  });
+
+  const findCloseBtn = modal.querySelector(".modal-close");
+  findCloseBtn.addEventListener("click", (e) => {
+    findIdModal.style.display = "none";
+  });
+
+  findIdModal.addEventListener("click", (e) => {
+    const evTarget = e.target;
+    if (evTarget.classList.contains("find__modal-overlay")) {
+      findIdModal.style.display = "none";
+    }
+  });*/
+</script>
 {% endblock %}
