--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -35,10 +35,50 @@
       <button id="signup__1st__btn" onclick="signupFunction()">다음</button>
       <div id="sub__reg__menu">
         회원가입 시, MOCO가 제공하는 서비스를 모두 이용하실 수 있습니다. MOCO의
-        <button class="openBtn1">서비스 이용약관</button>,
-        <button class="openBtn2">개인정보취급방침</button>에 동의합니다.
+        <button id="openBtn1">서비스 이용약관</button>,
+        <button id="openBtn2">개인정보취급방침</button>에 동의합니다.
         <input type="checkbox" id="input__reg__cb" />
         <label for="input__reg__cb"></label>
+      </div>
+      <div id="signup__modal-1" class="modal-overlay" style="display: none;">
+        <div class="modal__window">
+          <div class="modal__title">
+            <h3>서비스 이용약관</h3>
+          </div>
+          <div class="modal-close">X</div>
+          <div class="modal__content">
+            여우별 감사합니다 아슬라 컴퓨터 바나나 나비잠 사과 아슬라 나래
+            감사합니다 비나리 책방 아리아 아슬라 나비잠 아리아 노트북 감사합니다
+            별빛 늘품 미리내 로운 노트북 우리는 도르레 아련 함초롱하다 도서관
+            바람꽃 바람꽃 예그리나 늘품 미리내 미쁘다 노트북 우리는 나래 옅구름
+            산들림 아리아 예그리나 여우별 감사합니다 여우별 도르레 함초롱하다
+            아슬라 우리는 소솜 감사합니다. 옅구름 산들림 다솜 도서 감사합니다
+            가온해 나래 가온해 곰다시 그루잠 컴퓨터 나비잠 도담도담 달볓 도서
+            아름드리 사과 도서관 함초롱하다 아름드리 노트북 비나리 포도 나비잠
+            감사합니다 바나나 곰다시 로운 여우비 옅구름 도서관 책방 포도 노트북
+            별빛 바나나 컴퓨터 도담도담 달볓 도르레 감사합니다 이플 비나리
+          </div>
+        </div>
+      </div>
+      <div id="signup__modal-2" class="modal-overlay" style="display: none;">
+        <div class="modal__window">
+          <div class="modal__title">
+            <h3>개인정보취급방침</h3>
+          </div>
+          <div class="modal-close">X</div>
+          <div class="modal__content">
+            여우별 감사합니다 아슬라 컴퓨터 바나나 나비잠 사과 아슬라 나래
+            감사합니다 비나리 책방 아리아 아슬라 나비잠 아리아 노트북 감사합니다
+            별빛 늘품 미리내 로운 노트북 우리는 도르레 아련 함초롱하다 도서관
+            바람꽃 바람꽃 예그리나 늘품 미리내 미쁘다 노트북 우리는 나래 옅구름
+            산들림 아리아 예그리나 여우별 감사합니다 여우별 도르레 함초롱하다
+            아슬라 우리는 소솜 감사합니다. 옅구름 산들림 다솜 도서 감사합니다
+            가온해 나래 가온해 곰다시 그루잠 컴퓨터 나비잠 도담도담 달볓 도서
+            아름드리 사과 도서관 함초롱하다 아름드리 노트북 비나리 포도 나비잠
+            감사합니다 바나나 곰다시 로운 여우비 옅구름 도서관 책방 포도 노트북
+            별빛 바나나 컴퓨터 도담도담 달볓 도르레 감사합니다 이플 비나리
+          </div>
+        </div>
       </div>
       <div class="signup__sim">
         <hr noshade />
@@ -51,40 +91,7 @@
         <button>카카오</button>
         <button>깃허브</button>
       </div>
-      <div class="modal hidden">
-        <div class="bg"></div>
-        <div class="modalBox">
-          <p>
-            <span
-              style="font-size: 1.5rem; font-weight: 900; margin-bottom: 0.5rem"
-              >서비스 이용약관</span
-            ><br />
-            여우별 감사합니다 아슬라 컴퓨터 바나나 나비잠 사과 아슬라 나래
-            감사합니다 비나리 책방 아리아 아슬라 나비잠 아리아 노트북 감사합니다
-            별빛 늘품 미리내 로운 노트북 우리는 도르레 아련 함초롱하다 도서관
-            바람꽃 바람꽃 예그리나 늘품 미리내 미쁘다 노트북 우리는 나래 옅구름
-            산들림 아리아 예그리나 여우별 감사합니다 여우별 도르레 함초롱하다
-            아슬라 우리는 소솜 감사합니다. 옅구름 산들림 다솜 도서 감사합니다
-            가온해 나래 가온해 곰다시 그루잠 컴퓨터 나비잠 도담도담 달볓 도서
-            아름드리 사과 도서관 함초롱하다 아름드리 노트북 비나리 포도 나비잠
-            감사합니다 바나나 곰다시 로운 여우비 옅구름 도서관 책방 포도 노트북
-            별빛 바나나 컴퓨터 도담도담 달볓 도르레 감사합니다 이플 비나리
-            가온해 로운 아리아 비나리 노트북 나래 다솜. 포도 소솜 포도 미쁘다
-            안녕 달볓 컴퓨터 옅구름 그루잠 아슬라 산들림 아련 미쁘다 아련
-            예그리나 도르레 안녕 늘품 이플 소록소록 아슬라 비나리 곰다시 늘품
-            바나나 곰다시 노트북 컴퓨터 여우별 여우별 감사합니다 가온해 예그리나
-            바나나 노트북 도담도담 감사합니다 아련 나래 미리내 나래 나비잠
-            미리내 아름드리 우리는 함초롱하다 별빛 비나리 가온해 다솜. 여우별
-            감사합니다 아슬라 컴퓨터 바나나 나비잠 사과 아슬라 나래 감사합니다
-            비나리 책방 아리아 아슬라 나비잠 아리아 노트북 감사합니다 별빛 늘품
-            미리내 로운 노트북 우리는 도르레 아련 함초롱하다 도서관 바람꽃
-            바람꽃 예그리나 늘품 미리내 미쁘다 노트북 우리는 나래 옅구름 산들림
-            아리아 예그리나 여우별 감사합니다 여우별 도르레 함초롱하다 아슬라
-            우리는 소솜 감사합니다.
-          </p>
-          <button class="closeBtn">X</button>
-        </div>
-      </div>
+      
     </div>
   </div>
   <div id="signup__2nd__container">
@@ -196,28 +203,42 @@
   ></script>
 </main>
 <script>
-  const open = () => {
-    document.querySelector(".modal").classList.remove("hidden");
-  };
+  const modal = document.getElementById("signup__modal-1")
+  const btnModal = document.getElementById("openBtn1")
+  btnModal.addEventListener("click", e => {
+    modal.style.display = "flex"
+  })
 
-  const close = () => {
-    document.querySelector(".modal").classList.add("hidden");
-  };
+  const closeBtn = modal.querySelector(".modal-close")
+  closeBtn.addEventListener("click", e => {
+    modal.style.display = "none"
+  })
 
-  document.querySelector(".openBtn1").addEventListener("click", open);
-  document.querySelector(".openBtn2").addEventListener("click", open);
-  document.querySelector(".closeBtn").addEventListener("click", close);
-  document.querySelector(".bg").addEventListener("click", close);
-
-  function popupOpen() {
-    if (document.all.popup.style.visibility == "hidden") {
-      document.all.popup.style.visibility = "visible";
-      return false;
-    } else {
-      document.all.popup.style.visibility = "hidden";
-      return false;
+  modal.addEventListener("click", e => {
+    const evTarget = e.target
+    if(evTarget.classList.contains("modal-overlay")) {
+        modal.style.display = "none"
     }
-  }
+  })
+
+  const modal2 = document.getElementById("signup__modal-2")
+  const btnModal2 = document.getElementById("openBtn2")
+  btnModal2.addEventListener("click", e => {
+    modal2.style.display = "flex"
+  })
+
+  const closeBtn2 = modal2.querySelector(".modal-close")
+  closeBtn2.addEventListener("click", e => {
+    modal2.style.display = "none"
+  })
+
+  modal2.addEventListener("click", e => {
+    const evTarget = e.target
+    if(evTarget.classList.contains("modal-overlay")) {
+        modal2.style.display = "none"
+    }
+  })
+
 
   /*function signupFunction() {
     const div1st = document.getElementById("signup__1st__container");
