--- a/posts/templates/posts/base.html
+++ b/posts/templates/posts/base.html
@@ -21,27 +21,72 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="{% static 'css/base.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/home.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/detail.css' %}" />
-    <link rel="stylesheet" href="{% static 'css/write.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/place_home.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/place_detail.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/place_write.css' %}" />
     <title>MOCO</title>
   </head>
   <body>
     <nav class="navbar">
       <ul class="navbar__list">
         <li><a href="{% url 'posts:home' %}">MOCO</a></li>
-        <li><a href="{% url 'posts:home' %}">모각코</a></li>
+        <li>
+          <div class="base__post_dropdown">
+            <div class="base__post_dropbtn">
+              <span>모각코</span>
+            </div>
+            <ul class="base__post_dropmenu">
+              <li><a href="{% url 'posts:write' %}">모각코 모집</a></li>
+              <li><a href="{% url 'posts:review_home' %}">모각코 후기</a></li>
+            </ul>
+          </div>
+        </li>
         <li><a href="{% url 'place:home' %}">플레이스</a></li>
         <li><a href="">공지사항</a></li>
       </ul>
       <ul class="navbar__shortcut">
         {% if user.is_authenticated %}
-        <li><a href="{% url 'posts:write' %}">글쓰기</a></li>
+        <li>
+          <div class="base__dropdown">
+            <div class="base__dropbtn">
+              <span>글쓰기</span>
+            </div>
+            <ul class="base__dropmenu">
+              <li><a href="{% url 'posts:write' %}">모각코 모집</a></li>
+              <li><a href="{% url 'place:write' %}">플레이스</a></li>
+            </ul>
+          </div>
+        </li>
         <i class="fa-regular fa-bell"></i>
-        <i class="fa-solid fa-circle-user"></i>
+        <div class="base__profile_dropdown">
+          <div class="base__profile_dropbtn">
+            <i class="fa-solid fa-circle-user"></i>
+          </div>
+          <ul class="base__profile_dropmenu">
+            <li>
+              <a href="{% url 'users:profile_edit' user.id %}">프로필 수정</a>
+            </li>
+            <li>
+              <a href="{% url 'users:profile_view' user.id %}">마이페이지</a>
+            </li>
+            <li>
+              <a href="{% url 'users:signout'}">로그아웃</a>
+            </li>
+          </ul>
+        </div>
         {% else %}
-        <li><a href="{% url 'posts:write' %}">글쓰기</a></li>
-        <li><a href="">로그인</a></li>
+        <li>
+          <div class="base__dropdown">
+            <div class="base__dropbtn">
+              <span>글쓰기</span>
+            </div>
+            <ul class="base__dropmenu">
+              <li><a href="{% url 'posts:write' %}">모각코 모집</a></li>
+              <li><a href="{% url 'place:write' %}">플레이스</a></li>
+            </ul>
+          </div>
+        </li>
+        <li><a href="{% url 'users:login' %}">로그인</a></li>
         {% endif %}
       </ul>
     </nav>
